# aitoolman

./: .gitignore  README.md  pyproject.toml
aitoolman/: __init__.py  app.py  channel.py  cli.py  client.py  code_editor.py  model.py  module.py  postprocess.py  provider.py  resmanager.py  util.py  workflow.py  wsserver.py  zmqclient.py  zmqserver.py
docs/: README.zh.md  changelog.md  charts.md  cli.md  config.en.md  config.md  introduction.md  quick_start.en.md  quick_start.md  reference.en.md  reference.md  simple_docs.md
test/: code_editor.py  demo_resmanager.py  mock_llmclient.py  test_channel.py  test_client.py  test_postprocess.py  test_provider.py  test_workflow.py  workflow_customer_service.py
