[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "aitoolman"
version = "0.2.0"
authors = [
  { name="Dingyuan Wang", email="abcdoyle888@gmail.com" },
]
description = "Controllable and Transparent LLM Application Framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "httpx[http2]",
  "httpx-sse",
  "jinja2",
  "json-repair",
  "BeautifulSoup4",
  "lxml",
  "xmltodict",
  "pyzmq"
]
[project.optional-dependencies]
uuid = [
    "uuid-utils",
]

[project.urls]
Homepage = "https://github.com/gumblex/aitoolman"
Issues = "https://github.com/gumblex/aitoolman/issues"
